--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,21 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+input{
+    width: 95%;
+    height: 22px;
+    padding: 0.9rem;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    border: 0;
+    margin: 10px;
+}
+
+input:focus{
+    outline: none;
+    box-shadow: 0 0 10px #009E9E;
+}
+
 .container {
     background-color: #E9E9E9;
     margin: auto;
@@ -13,7 +28,7 @@ body {
 }
 
 .header {
-    padding: 2.5rem;
+    padding: 0.9rem;
 }
 
 .flex-container {
@@ -66,7 +81,7 @@ body {
     margin-left: 0.9rem;
 }
 
-.button {
+button {
     margin-top: 1.2rem;
     width: 100%;
     padding: 0.9rem 2rem;
@@ -78,7 +93,7 @@ body {
     background-color: #F0F0F0;
 }
 
-.button:hover {
+button:hover {
     background-color: #E9E9E9;
 }
 
@@ -87,8 +102,8 @@ body {
     text-align: center;
 }
 
-.icon{
-    font-size: 2.8rem;
+#icon{
+    font-size: 45px;
 }
 
 @media screen and (max-width: 620px){
@@ -108,4 +123,22 @@ body {
     .container{
         width: 95%;
     }
+
+    .header{
+        padding: 15px;
+    }
+}
+
+.form-register{
+    background-color: #006A6A;
+    padding: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+}
+
+a{
+    color: #E9E9E9;
+    font-size: 0.8rem;
 }
